<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.android.musicplayerdesign.PlayerActivity">

    <TextView
        android:id="@+id/playerTextView"
        style="@style/ExplanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_text"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/playerSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playerButtonBar"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startTime"
            style="@style/TextViewProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/CustomProgressBarHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:progress="50" />

        <TextView
            android:id="@+id/endTime"
            style="@style/TextViewProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomButtonBar"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/repeatButton"
            style="@style/SmallCirclePlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_repeat_white_small"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/previousButton"
            style="@style/SmallCirclePlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_skip_previous_white_small"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/playPauseButton"
            style="@style/CirclePlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_white"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/nextButton"
            style="@style/SmallCirclePlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_skip_next_white_small"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/shuffleButton"
            style="@style/SmallCirclePlayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_shuffle_white_small"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/playerButton"
            style="@style/HighlightedMenuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_play_arrow_white_small"
            android:gravity="center_horizontal"
            android:text="@string/player" />

        <TextView
            android:id="@+id/playlistButton"
            style="@style/DefaultMenuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_list_white_small"
            android:gravity="center_horizontal"
            android:text="@string/playlist" />

        <TextView
            android:id="@+id/libraryButton"
            style="@style/DefaultMenuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_library_music_white_small"
            android:gravity="center_horizontal"
            android:text="@string/library" />

        <TextView
            android:id="@+id/settingsButton"
            style="@style/DefaultMenuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_settings_white_small"
            android:gravity="center_horizontal"
            android:text="@string/settings" />

    </LinearLayout>

</RelativeLayout>
